@@ -13,3 +13,6 @@ http://llvm.org/svn/llvm-project/compiler-rt in the following directories:
 Trivial and urgent fixes (portability, build fixes, etc.) may go directly to the
 GCC tree.  All non-trivial changes, functionality improvements, etc. should go
 through the upstream tree first and then be merged back to the GCC tree.
+The merges from upstream should be done with the aid of the merge.sh script;
+it will also update the file MERGE to contain the upstream revision
+we merged with.
